--- a/CSS/meus-codigos.css
+++ b/CSS/meus-codigos.css
@@ -20,12 +20,11 @@ header {
   align-items: center;
   padding: 15px 30px;
   backdrop-filter: blur(10px);
-  background-color: rgba(255, 255, 255, 0.08);
+  background-color: rgba(255, 255, 255, 0.08); /* fundo mais claro */
   border-bottom: 2px solid #444;
   position: sticky;
   top: 0;
   z-index: 10;
-  
 }
 
 
